--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -8,7 +8,7 @@
     <name>POJO Check</name>
 
     <!-- A displayed Vendor name or Organization ID displayed on the Plugins Page. -->
-    <vendor email="panxin@panxin.me" url="https://panxin.me">pan</vendor>
+    <vendor email="panxin@panxin.me" url="https://panxin.me">pan xin</vendor>
 
     <!-- Description of the plugin displayed on the Plugin Page and IDE Plugin Manager.
          Simple HTML elements (text formatting, paragraphs, and lists) can be added inside of <![CDATA[ ]]> tag.
@@ -42,7 +42,7 @@ The "Problems" tab at the bottom of IntelliJ IDEA will automatically detect and 
     </extensions>
     <change-notes>
         <![CDATA[
-      1.0.0 项目初始化<br>
+      1.0.0 project init<br>
         ]]>
     </change-notes>
     <actions>
